--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # dependencies
 /node_modules
-/server/node_modules
+/Server/node_modules
 /.pnp
 .pnp.js
 
@@ -11,7 +11,7 @@
 
 # production
 /build
-/server/build
+/Server/build
 
 # misc
 .DS_Store
